Changed the URL for linkedin.

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <ul class="footer-social-links">
 				<li><a href="https://www.facebook.com/groups/1547205102014223/?source=create_flow" target="_blank"><i class="fab fa-facebook-f"></i></a>
 				</li><li><a href="https://twitter.com/billmasters66?lang=en&lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
-				</li><li><a href="https://www.linkedin.com/in/bilialkemp/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+				</li><li><a href="https://www.linkedin.com/in/bilalmasters/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 				</li><li><a href="https://dribbble.com/Cerius" target="_blank"><i class="fab fa-dribbble"></i></a>
         </ul>
                 <h5>Bilal Masters</h5>
