Changed the styling of multiple pages and changed the date in the countdown clock. Adding functionality to in-site linking to elements.

--- a/PageCountdown/countdown.html
+++ b/PageCountdown/countdown.html
@@ -30,7 +30,7 @@
 <section class="landing">
     <div class="landing-inner">
         <i class="fas fa-laptop-code" aria-hidden="true"></i>
-        <p class="appName"><span class="primary">Techlow</span></p>
+        <p class="appName"><span class="primary">Lifengineered.com</span></p>
         <p class="pageMessage">A blog site for developers</p>
         <h1 class="comingsoon">Coming Soon</h1>
         <p class="pageMessage"><a href="../index.html">Back to home</a></p>
