--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta http-equiv="x-ua-compatible" content="IE=edg, chrome=1"><!-- Display webpage in edge mode/IE 
     in highes supported document mode -->
      <meta name="keywords" content="web design, bilal masters, bilal, masters, portfolio, affordable web design, urban, urban global, urban global.net, urban freelancer, freelancer, freelancers, professional web design, web development, development, Urban, Urban Freelancer, web design company, web development company">
-    <meta property="og:url"                content="https://bilalmasters.com/" />
-    <meta property="og:title"              content="Bilal Masters" />
-    <meta property="og:description"        content="Web Developer" />
-    <meta property="og:image"              content="https://bilalmasters.com/Img/my-pic-4.jpg" /> 
+    <meta property="og:url" content="https://bilalmasters.com/" />
+    <meta property="og:title" content="Bilal Masters" />
+    <meta property="og:description" content="Web Developer" />
+    <meta property="og:image" content="https://bilalmasters.com/Img/my-pic-4.jpg" /> 
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
     <link rel="stylesheet" type="text/css" href="CSS/custombox.min.css">
@@ -22,7 +22,7 @@
 </head>
 <body>
 <!-- Menu -->
-<header class="sticky">
+<header class="navbar sticky">
         <div class="container">
             <div class="logo"> 
                <a href="./index.html"><img src="Img/vectorstock_20681631.jpg" alt="Bilal Masters Logo Image" /></a> 
@@ -75,7 +75,7 @@
       <div class="info">
        <div class="colored-square"></div>
         <h1 class="top_info_h1">Bilal Masters</h1>
-    <p class="top_info_p">Web Developer</p>
+    <p class="top_info_p">Software Developer</p>
     <a href="https://github.com/ceriustech" target="_blank" class="top_info_a">My GitHub<span class="top_info_icon_github"><i class="fab fa-github-square"></i></span></a>
    </div>
    <div class="img">
@@ -142,7 +142,7 @@
                   <div class="overlay">
                       <h2 class="portfolio_h2">LimbleMedia</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_1">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_1">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -151,7 +151,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">Honyst</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_2">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_2">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -160,7 +160,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">PrimmHouse</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_3">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_3">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -169,7 +169,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">UrbanGlobal</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_4">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_4">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -178,7 +178,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">DigitalCitizen</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_5">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_5">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -187,7 +187,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">WebGlobe</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_6">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_6">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -196,7 +196,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">Data-Mind</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_7">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_7">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -205,7 +205,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">Safe-Space</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_8">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_8">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -214,7 +214,7 @@
                    <div class="overlay">
                       <h2 class="portfolio_h2">Suppr</h2>
                       <p class="icon-links">
-                    <a href="portfolio.html#portfolio_9">Take a look</a>
+                    <a class="portfolio-link" href="portfolio.html#portfolio_9">Take a look</a>
                     </p>
                   </div>
           </div>
@@ -415,7 +415,7 @@
 				</li><li><a href="https://dribbble.com/Cerius" target="_blank"><i class="fab fa-dribbble"></i></a>
         </ul>
                 <h5>Bilal Masters</h5>
-                <h6>Web Developer</h6>
+                <h6>Software Developer</h6>
     </footer>
 <script type="text/javascript" src="Js/main.js"></script>
 <script type="text/javascript" src="Js/app.js"></script>
