Changed the linking on the portfolio page navigation and styling on the home page.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
 <section id="portfolio" class="section-padding">
     <div class="container">
         <div class="title">
-        <div class="colored-square-2"></div>
-        <h1 class="portfolio_h1">Portfolio</h1>
+            <a href="/portfolio.html" class="portfolio-page-link">
+                <div class="colored-square-2"></div>
+                <h1 class="portfolio_h1">Portfolio</h1>
+            </a>
         </div>
     <div class="portfolio-container">
           <div class="hovereffect panel image-1">
