--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
           <nav class="site-nav">
               <ul>
                <li><a class="scroll_btn" href="index.html">Home</a></li>
-               <li><a class="scroll_btn" href="#services-section">Services</a></li>
-               <li><a class="scroll_btn"  href="#portfolio">Portfolio</a></li>
-               <li><a class="scroll_btn"  href="#experience-section">Experience</a></li>
-               <li><a class="scroll_btn"  href="#blog-section">Blog</a></li>
+               <li><a class="scroll_btn" href="index.html#services-section">Services</a></li>
+               <li><a class="scroll_btn"  href="index.html#portfolio">Portfolio</a></li>
+               <li><a class="scroll_btn"  href="index.html#experience-section">Experience</a></li>
+               <li><a class="scroll_btn"  href="index.html#blog-section">Blog</a></li>
                <li><a id="contact">Contact</a></li>
               </ul> 
           </nav>
